# Black-Box-Variational-Inference-for-Biological-computation

./: GammaBranchProcess-BLVI.cpp  GammaBranchProcess-BLVI.h  GammaRateProcess-BLVI.cpp  GammaRateProcess-BLVI.h  Genomics Sequencing: Fighting Disease With Artificial Intelligence | Intel  Intel | Genomics Sequencing: Fighting Disease With Artificial Intelligence.md  PoissonMixtureProfileProcess-BLVI.cpp  PoissonSBDPProfileProcess-BLVI.cpp  PoissonSBDPProfileProcess-BLVI.h  README.md  SBDPProfileProcess-BLVI.cpp
AI algorithm to speed up the computational process of biological field/: PoissonMixtureProfileProcess-BLVI.h  SBDPProfileProcess-BLVI.h
Analysis-of-Biological-Data/: Intel AI | Genomics Sequencing: Fighting Disease With Artificial Intelligence.md
Analysis-of-Biological-Data/Big_Data_Analysis/: pom.xml
Analysis-of-Biological-Data/Likelihood_Calculation_on_tree/: EM_Algorithm.py
Analysis-of-Biological-Data/Tree_Algorithm_for_DNA_PROTEIN/: DistanceCalculator.py
Analysis-of-Biological-Data/biobigdata/: README.md  pom.xml
Data_Science_for_Medicine/: README.md
Data_Science_for_Medicine/Human_diseases/: CDI_disease  Machine_learning_human_disease.ipynb  README.md  Statistical_analysis_human_disease.ipynb
Data_Science_for_Medicine/Medical_prescription_fraud/: README.md
Java_for_Big_Data/BigDataTechniques/: README.md  pom.xml
Python for Data Science/: End-to-End ML-1.py  FrameworkOfDataScience-Visualization.py  Intel_MLProject_InterpreteModel.py  Intel_MLProject_Models.py  Intel_MLProject_Preprocess_and_Visualization.py  README.md
Python for Data Science/Amazon_Fine_Food_Reviews/: Classification_KNN.py  Classification_NaiveBayes.py  Dimensionality_Reduction_PCA.py  Dimensionality_Reduction_tSNE.py  Exploratory_Data_Analysis.py  README.md  Word2Vec_Pytorch_Tensorflow.py
Python for Data Science/Asian_Rice_Diversity/: README.md  RiceDiversityEDA.ipynb  RiceDiversityEDA.py  RiceDiversityLine.csv  RiceDiversityPCA.R  RiceDiversityPCA.Rmd  RiceDiversityPCA.html  RiceDiversityPCA.md  (+2 more)
Technical_Revision/: README.md
Technical_Revision/Random_Matrix_for_Big_Data/: CMakeLists.txt  Eigen3.3.7.rar  Random_Matrix_Simulation.ipynb  Random_Matrix_Simulation.py
Technical_Revision/Random_Matrix_for_Big_Data/include/: DataVectorRandom.h  SparseMatrix.h  SparseRandomMatrix.h  utils.h
Technical_Revision/Random_Matrix_for_Big_Data/src/: SparseMatrix.cpp  SparseRandomMatrix.cpp  main.cpp  utils.cpp
(+45 files in other folders)
